# airdroid

./: .env.example  .gitignore  Cargo.toml  README.md
certstream.db/: IDENTITY  LOG  OPTIONS-000007
src/: error.rs  main.rs  prelude.rs
src/bot/: answer.rs  command.rs  mod.rs  send_update.rs  send_updates.rs
src/certstream/: dump.rs  json_types.rs  mod.rs  scrape.rs
src/utils/: helpers.rs  mod.rs
